essai du changement de condition d'installation de java

--- a/scripts/install
+++ b/scripts/install
@@ -11,7 +11,7 @@ mainpassword=$(ynh_user_get_info --username=$mainadmin --key=passsword)
 #=================================================
 ynh_script_progression "checking up source if needed..."
 
-if [[ $javaversion == "JavaSE-21" ]]; then
+if ! dpkg -l | grep -q '^ii  openjdk-21-jdk'; then
   ynh_exec_and_print_stderr_only_if_error wget -N -O /tmp/jdk-21_linux-x64_bin.deb https://download.oracle.com/java/21/latest/jdk-21_linux-x64_bin.deb
   ynh_exec_and_print_stderr_only_if_error dpkg -i /tmp/jdk-21_linux-x64_bin.deb
 fi
