--- a/scripts/install
+++ b/scripts/install
@@ -57,9 +57,9 @@ ynh_config_add --template="login-identity-providers.xml" --destination="$install
 #=================================================
 # START SYSTEMD SERVICE
 #=================================================
-ynh_script_progression "Starting $app's systemd service..."
+#ynh_script_progression "Starting $app's systemd service..."
 
-ynh_systemctl --service=$app --action=start --log_path=systemd --wait_until="Please use the following URL to setup your Metabase installation:"
+#ynh_systemctl --service=$app --action=start --log_path=systemd --wait_until="Please use the following URL to setup your Metabase installation:"
 
 #=================================================
 # END OF SCRIPT
