--- a/scripts/install
+++ b/scripts/install
@@ -3,9 +3,6 @@
 source _common.sh
 source /usr/share/yunohost/helpers
 
-mainuser=$mainadmin
-mainpassword=$(ynh_user_get_info --username=$mainadmin --key=passsword)
-
 #=================================================
 # INSTALL JAVA SE 21 if chosen 
 #=================================================
@@ -53,6 +50,7 @@ ynh_script_progression "Adding $app's configuration..."
 
 ynh_config_add --template="nifi.properties" --destination="$install_dir/conf/nifi.properties"
 ynh_config_add --template="login-identity-providers.xml" --destination="$install_dir/conf/login-identity-providers.xml"
+ynh_config_add --template="login-identity-providers.xml" --destination="$install_dir/conf/authorizers.xml"
 
 #=================================================
 # START SYSTEMD SERVICE
