--- a/scripts/install
+++ b/scripts/install
@@ -50,7 +50,7 @@ ynh_script_progression "Adding $app's configuration..."
 
 ynh_config_add --template="nifi.properties" --destination="$install_dir/conf/nifi.properties"
 ynh_config_add --template="login-identity-providers.xml" --destination="$install_dir/conf/login-identity-providers.xml"
-ynh_config_add --template="login-identity-providers.xml" --destination="$install_dir/conf/authorizers.xml"
+ynh_config_add --template="authorizers.xml" --destination="$install_dir/conf/authorizers.xml"
 
 #=================================================
 # START SYSTEMD SERVICE
